SRE ops checks 2026-08-02: tracking update + three new patterns
Records the 2026-08-02 ops run and adds three reusable diagnostic
patterns that came out of it.

The mail one is the interesting one. Check 4's rotation landed on
lucos_mail_smtp, and 108k of its 944k log lines are external SASL
brute-force noise, so the habit has been to note 'known benign' and
move on. Grouping the log by postfix queue-id instead turned up 466
alert emails with an empty Message-ID header and two of them bounced
by Gmail — including a real docker_health alert fired during the
configy_sync incident. The sender never knew, because postfix had
already returned 2xx and the bounce notification went to spam.

The other two are the tools that made the rest of the run tractable:
gap analysis over the router access log (which finally settled a
caveat left open on seinn#583 by proving media_manager stopped
answering entirely rather than answering slowly), and the fork-shares-
the-connection-pool signature behind photos_worker's Postgres wire
desync.

Filed: lucos_monitoring#294, lucos_photos#500, lucos_media_manager#283.
Commented: lucos_locations#103, lucos_media_seinn#583.